--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy to App Engine
+      env:
+        SECRET: ${{ secrets.APP_SECRET }}
+        AUTH0_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+        AUTH0_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
       id: deploy
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
