--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
   # This workflow contains a single job called "build"
   deploy:
-    name: Deploying to Google Cloude
+    name: Deploying to Google Cloud
     runs-on: ubuntu-latest
     
     # Steps represent a sequence of tasks that will be executed as part of the job
