--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,23 +21,23 @@ jobs:
     name: Deploying to Google Cloud
     runs-on: ubuntu-latest
     env:
-      SECRET: ${{ secrets.APP_SECRET }}
-      AUTH0_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-      AUTH0_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
+      SECRET: '${{ secrets.APP_SECRET }}'
+      AUTH0_ID: '${{ secrets.AUTH0_CLIENT_ID }}'
+      AUTH0_SECRET: '${{ secrets.AUTH0_CLIENT_SECRET }}'
     
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
-  
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Deploy to App Engine
-      id: deploy
-      uses: google-github-actions/deploy-appengine@v0.2.0
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v0'
       with:
-        deliverables: app.yaml
-        project_id: ${{ secrets.GCP_PROJECT }}
-        credentials: ${{ secrets.GCP_CREDENTIALS }}
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-    - name: Test
-      run: curl "${{ steps.deploy.outputs.url }}"
+    - id: 'deploy'
+      uses: 'google-github-actions/deploy-appengine@v0'
+
+    # Example of using the output
+    - id: 'test'
+      run: 'curl "${{ steps.deploy.outputs.url }}"'
