--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
       AUTH0_SECRET: '${{ secrets.AUTH0_CLIENT_SECRET }}'
       
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
