--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,11 @@ on:
 jobs:
 
   deploy:
-    name: Deploying to Google Cloude
+    name: Deploying to Google Cloud
+    env:
+      SECRET: ${{ secrets.APP_SECRET }}
+      AUTH0_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+      AUTH0_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -27,10 +31,6 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy to App Engine
-      env:
-        SECRET: ${{ secrets.APP_SECRET }}
-        AUTH0_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-        AUTH0_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
       id: deploy
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
